--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,15 @@ before_install:
   - npm link "unitejs-framework" "unitejs-cli-core" "unitejs-engine"
   - cd ../../
   - npm install -g gulp
+  - npm install -g cordova
   - node unitejs/cli/bin/unite configure --packageName=vue-typescript --title="Vue TypeScript" --profile=VueTypeScript --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=class --name=MyClass --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=component --name=MyComponent --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=enum --name=MyEnum --outputDirectory=./app
   - node unitejs/cli/bin/unite generate --type=interface --name=MyInterface --outputDirectory=./app
-  - node unitejs/cli/bin/unite platform --operation=add --platformName=Electron --outputDirectory=./app
+  - node unitejs/cli/bin/unite platform --operation=add --platformName=Cordova --outputDirectory=./app
   - node unitejs/cli/bin/unite platform --operation=add --platformName=Docker --outputDirectory=./app
+  - node unitejs/cli/bin/unite platform --operation=add --platformName=Electron --outputDirectory=./app
   - cd ./app/www
 install:
   - npm install
@@ -40,12 +42,14 @@ script:
   - gulp unit || travis_terminate 1
   - gulp e2e-install --drivers=chrome || travis_terminate 1
   - gulp e2e || travis_terminate 1
-  - gulp platform-electron-dev || travis_terminate 1
   - gulp build --buildConfiguration=prod || travis_terminate 1
   - gulp e2e || travis_terminate 1
   - gulp platform-web-package --buildConfiguration=prod || travis_terminate 1
+  - gulp platform-electron-dev || travis_terminate 1
   - gulp platform-electron-package --buildConfiguration=prod || travis_terminate 1
   - gulp platform-docker-package --buildConfiguration=prod || travis_terminate 1
+  - gulp platform-cordova-dev --buildConfiguration=prod || travis_terminate 1
+  - gulp platform-cordova-theme --buildConfiguration=prod || travis_terminate 1
 cache:
   directories:
   - ./app/www/node_modules
