--- a/.travis.yml
+++ b/.travis.yml
@@ -5,38 +5,38 @@ services:
 node_js:
   - "8"
 before_install:
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/framework.git unitejs/framework
-  - cd unitejs/framework
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/framework.git unitejs-framework
+  - cd unitejs-framework
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/cli-core.git unitejs/cli-core
-  - cd unitejs/cli-core
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/cli-core.git unitejs-cli-core
+  - cd unitejs-cli-core
   - npm link unitejs-framework
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/packages.git unitejs/packages
-  - cd unitejs/packages
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/packages.git unitejs-packages
+  - cd unitejs-packages
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/engine.git unitejs/engine
-  - cd unitejs/engine
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/engine.git unitejs-engine
+  - cd unitejs-engine
   - npm link unitejs-framework unitejs-packages
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/cli.git unitejs/cli
-  - cd unitejs/cli
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/cli.git unitejs-cli
+  - cd unitejs-cli
   - npm link unitejs-framework unitejs-cli-core unitejs-engine
   - cd ../../
   - npm install -g gulp
   - npm install -g cordova
-  - node unitejs/cli/bin/unite configure --packageName=vue-typescript --title="Vue TypeScript" --profile=VueTypeScript --outputDirectory=./app
-  - node unitejs/cli/bin/unite generate --type=class --name=MyClass --outputDirectory=./app
-  - node unitejs/cli/bin/unite generate --type=component --name=MyComponent --outputDirectory=./app
-  - node unitejs/cli/bin/unite generate --type=enum --name=MyEnum --outputDirectory=./app
-  - node unitejs/cli/bin/unite generate --type=interface --name=MyInterface --outputDirectory=./app
-  - node unitejs/cli/bin/unite platform --operation=add --platformName=Cordova --outputDirectory=./app
-  - node unitejs/cli/bin/unite platform --operation=add --platformName=Docker --outputDirectory=./app
-  - node unitejs/cli/bin/unite platform --operation=add --platformName=Electron --outputDirectory=./app
+  - node unitejs-cli/bin/unite configure --packageName=vue-typescript --title="Vue TypeScript" --profile=VueTypeScript --outputDirectory=./app
+  - node unitejs-cli/bin/unite generate --type=class --name=MyClass --outputDirectory=./app
+  - node unitejs-cli/bin/unite generate --type=component --name=MyComponent --outputDirectory=./app
+  - node unitejs-cli/bin/unite generate --type=enum --name=MyEnum --outputDirectory=./app
+  - node unitejs-cli/bin/unite generate --type=interface --name=MyInterface --outputDirectory=./app
+  - node unitejs-cli/bin/unite platform --operation=add --platformName=Cordova --outputDirectory=./app
+  - node unitejs-cli/bin/unite platform --operation=add --platformName=Docker --outputDirectory=./app
+  - node unitejs-cli/bin/unite platform --operation=add --platformName=Electron --outputDirectory=./app
   - cd ./app/www
 install:
   - npm install
